playground/notas_tests/invalid/r2-03.hulk
let y = x in let x = 1 in print(y);
